build the concept of queuing